# ecg-classifier

./:  (1).gitignore  .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  LICENSE  README.md  alembic.ini  config  ecg_img.dvc  pyproject.toml  pytest.ini  ruff.toml
.dvc/: config
alembic/: env.py
alembic/versions/: 20260414_000001_create_registered_models.py  2426b22f452a_add_tg.py  94e7e1dc0a86_add_artifact_uris_to_registered_models.py  c7af02ed1de7_add_tg.py
api/: celery_app.py  main.py
api/core/: security.py  settings.py
api/db/: base_model.py  session.py
api/models/: model_registry.py  tg_history.py  tg_user.py
api/observability/: metrics.py
api/repositories/: model_registry.py  tg_history.py
api/routers/: admin_experiments.py  admin_models.py  auth.py  inference.py  inference_test.py  inference_tg.py  tasks.py  tg_history.py
api/schemas/: experiment.py  inference.py  model_registry.py  tg.py
api/services/: artifact_storage.py  gpu_lock.py  inference.py  metrics.py  storage.py  training.py
api/tasks/: experiments.py  inference.py
artifacts/manifests/: raw_image_series_manifest.csv
data_registry/: ecg_img.dvc
ecg_classifier/: commands.py
ecg_classifier/conf/: config.yaml
ecg_classifier/data/: datamodule.py  dataset.py  download_yadisk.py  split_data.py  (+1 more)
infra/: Dockerfile.data  api.yml  docker-compose.api.yml  docker-compose.yml  serv.yml
markdown/: API.md  TESTS.md  TG.md
scripts/: data_init.sh  normalize_split_paths.py
tests/: conftest.py  test_api_health_metrics.py  test_inference_default_model.py  test_prometheus_metrics.py
tg_bot/: config.py  main.py
(+77 files in other folders)
